--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@
 	top: 15px; 
 	width: 29px; 
 }
-#mapContainer #mapControls #up { background: url(iconUp.png) no-repeat center top; display: block; height: 26px; width: 29px; }
-#mapContainer #mapControls #down { background: url(iconDown.png) no-repeat center top; display: block; height: 27px; width: 29px; }
+#mapContainer #mapControls #up { background: url(img/iconUp.png) no-repeat center top; display: block; height: 26px; width: 29px; }
+#mapContainer #mapControls #down { background: url(img/iconDown.png) no-repeat center top; display: block; height: 27px; width: 29px; }
 
 #infobox { 
 	float:left; 
@@ -77,20 +77,28 @@
 
 .myButton {
 	background-color:#0C085C;
-	-moz-border-radius:5px;
-	-webkit-border-radius:5px;
-	border-radius:5px;
+	-moz-border-radius:7px;
+	-webkit-border-radius:7px;
+	border-radius:7px;
 	border:1px solid #000000;
 	display:inline-block;
 	cursor:pointer;
 	color:#EBEDFF;
 	font-family:arial;
-	font-size:10px;
-	padding:2px 4px;
+	font-size:14px;
+	padding:3px 5px;
 	margin-left:1px;
 	margin-right:1px;
+	margin-bottom:1px;
 	text-decoration:none;
 }
+
 .myButton:hover {
 	background-color:#6675D9;
+}
+
+#searchbox {
+	box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+	transition: border linear .2s,box-shadow linear .2s;
+	border-radius: 4px;
 }
