--- a/style.css
+++ b/style.css
@@ -1,25 +1,36 @@
-#all { 
-	height: 800px; 		
-	width: 1400px; 
-	position: absolute; 
-	
+
+#all { 			
+	height: 700px; 		
+	width: 1200px; 
+	position: absolute; 	
 }
+
 #mapContainer { 
 	
-	border: 1px solid #ccc; 
+	border: 0px solid #ccc; 
 	height: 100%; 	
 	width: 80%; 
 	left: 20%;
 
 	position: absolute; 
 	overflow: hidden;
-	background-color: #D1DECE;
+	background-color: #e0f1e1;
 }
 #mapContainer #map { 
+	position: relative;
 	height: 100%; 
 	width: 100%; 
 
 }
+
+#mapContainer #gradient {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 18px;
+}
+
 #mapContainer #mapControls { 
 	position: absolute; 
 	left: 15px; 
@@ -34,35 +45,11 @@
 	width:20%;
 	height: 100%;
 	position: relative;
-	border: 1px solid #ccc; 
-	background-color: #6684D9;
-	
+	border: 0px solid #ccc; 
+	background-color: #97a6df;	
 	color:#EBEDFF;
 	font-family:arial;
-
 }
-
-#infobox  #infoname {
-	height: 20px;
-	display: block;
-	font-size:18px;
-	margin-left: 5px;
-	margin-right: 5px;
-
-	
-}
-
-#infobox  #infodetail {
-	height: 40px;
-	display: block;
-	/*background-color: #bbbbbb;*/
-	margin-left: 5px;
-	margin-right: 5px;
-	margin-bottom:10px;
-	font-size:12px;
-}
-
-
 
 #infobox #logo {
 	display: block;
@@ -72,11 +59,38 @@
 	margin-bottom: 10px;
 }
 
+#infobox  #infoname {
+	height: 20px;
+	display: block;
+	font-size:18px;
+	margin-left: 5px;
+	margin-right: 5px;
+}
 
+#infobox  #infodetail {
+	height: 40px;
+	display: block;
+	margin-left: 5px;
+	margin-right: 5px;
+	margin-bottom:10px;
+	font-size:12px;
+}
 
+#searchbox {
+	box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+	margin: 2%;
+	width: 96%;
+	transition: border linear .2s,box-shadow linear .2s;
+	border-radius: 4px;
+}
+
+#infobox  #infolist {
+	margin: 2%;
+	width: 96%;
+}
 
 .myButton {
-	background-color:#0C085C;
+	background-color:#131840;
 	-moz-border-radius:7px;
 	-webkit-border-radius:7px;
 	border-radius:7px;
@@ -89,7 +103,7 @@
 	padding:1px 5px;
 	margin-left:1px;
 	margin-right:1px;
-	margin-bottom:1px;
+	margin-bottom:2px;
 	text-decoration:none;
 }
 
@@ -97,8 +111,3 @@
 	background-color:#6675D9;
 }
 
-#searchbox {
-	box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
-	transition: border linear .2s,box-shadow linear .2s;
-	border-radius: 4px;
-}
